# iia

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  data_table.cpp  data_table.h  json_convert.cpp  json_convert.h  json_converter.cpp  json_converter.h  main.cpp  main_window.cpp  main_window.h
